--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
   <button id="startQuizButton">Start Quiz</button>
 </section>
 
-<section class="quiz-section">
+<section class="quiz-section" style="display: none;">
   <div id="question-wrapper">
     <h1 id="question"></h1>
-    <div id="choices"></div>
+    <div id="choices">
+      <input class="option" type="radio" name="option">
+    </div>
   </div>
   <div id="questionNumberDisplay"></div>
   </section>
 
-<section class="result-section">
+<section class="result-section" style="display: none;">
   <h1>Final Score</h1>
   <h2 id="finalScore"></h2>
   <div id="result_message"></div>
