--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
 <body>
 
 <header>
-<!-- shows on all pages -->
+  <h1>NHL Quiz</h1>
 </header>
 
+<div class="container">
+
 <section class="start-section">
-  <h1>NHL Quiz</h1>
   <button id="startQuizButton">Start Quiz</button>
 </section>
 
 <section class="quiz-section" style="display: none;">
   <div id="question-wrapper">
-    <h1 id="question"></h1>
-    <div id="choices">
-      <input class="option" type="radio" name="option">
-    </div>
+    <h2 id="question"></h2>
+    <form id="choices"></form>
   </div>
   <div id="questionNumberDisplay"></div>
+  <div id="scoreDisplay"></div>
+  <h3 id="correctAnswerDisplay"></h3>
+  <div id=images></div>
   </section>
 
 <section class="result-section" style="display: none;">
-  <h1>Final Score</h1>
-  <h2 id="finalScore"></h2>
+  <h2 id=scoreHeader>Final Score</h2>
+  <h3 class="finalScore"></h3>
   <div id="result_message"></div>
   <button id="tryagain">Retry Quiz</button>
 </section>
+
+</div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>  
 <script src="app.js"></script>
