functioning app but with correct answer message bug to work out

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <section class="result-section" style="display: none;">
   <h2 id=scoreHeader>Final Score</h2>
-  <h3 class="finalScore"></h3>
+  <h3 class="final-score"></h3>
   <div id="result_message"></div>
   <button id="tryagain">Retry Quiz</button>
 </section>
